fixed overflow on the screen, ty Jamel

--- a/style.css
+++ b/style.css
@@ -51,6 +51,8 @@ body {
 	flex-direction: column;
 	align-items: flex-end;
 	justify-content: space-around;
+	word-wrap: break-word;
+	word-break: break-all;
 }
 
 .userText {
